# info_portal

./: Dockerfile  Makefile  README.md  Untitled Document 1  ansible.cfg  manage.py  pyproject.toml
info/: admin.py  admin_mixins.py  forms.py  models.py  tests.py  urls.py  views.py
info/fixtures/: products-fixture.json
info/management/commands/: create_order.py  create_products.py  update_order.py
info/migrations/: 0001_initial.py  0002_auto_20230916_0459.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_auto_20231017_2341.py  0008_product_preview.py  0009_productimage.py
info/templates/info/: base.html  create-product.html  groups-list.html  info-st.html  order_detail.html  order_list.html  orders-list.html  product-details.html  product_confirm_delete.html  product_form.html  product_update_form.html  products-list.html
info_portal/: asgi.py  settings.py  urls.py  wsgi.py
inventory/: hosts
map_data/: forms.py  middlewares.py  urls.py  views.py
map_data/templates/map_data/: base.html  file-upload.html  map-query-params.html  user-bio-form.html
myauth/: models.py  tests.py  urls.py  views.py
myauth/management/commands/: bind_user.py
myauth/migrations/: 0001_initial.py
myauth/templates/myauth/: about-me.html  base.html  login.html  register.html
