[tool.poetry]
name = "info_portal"
version = "0.1.0"
description = ""
authors = ["MDI <mdi@home.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.3"

[tool.poetry.dev-dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
